--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <body>
         <canvas id="webgl-canvas"></canvas>
         <div id="float-layer"></div>
+        <p class="code"><a href="https://github.com/tomokazuyokoi/WEBGL_006_ToonShader" target="_blank">code</a></p>
     </body>
 </html>
